<resources>
    <string name="app_name">Queue</string>

    <string name="hello_world">Hello world!</string>

    <!-- Activity Toolbar Options -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_active">Active</string>
    <string name="action_details">View Details</string>
    <string name="action_delete">Delete</string>

    <!-- Activity Title -->
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_message">Message</string>

    <!-- Message Labels -->
    <string name="activity_add_edit_title">Title</string>
    <string name="activity_add_edit_phone">Phone Number</string>
    <string name="activity_add_edit_message">Message</string>
    <string name="activity_add_edit_date">Date</string>
    <string name="activity_add_edit_time">Time</string>
    <string name="activity_add_edit_repeat">Repeat</string>
    <string name="activity_add_edit_active">Active</string>
</resources>
