<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luisreyes.apps.queue.MessageActivity">

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_active"
        android:icon="@mipmap/ic_alarm_on"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_details"
        android:orderInCategory="200"
        app:showAsAction="never" />

</menu>
