<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/scene"
        android:src="@mipmap/sc_city"
        android:layout_alignParentRight="false"
        android:scaleType="centerCrop" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary"
        app:theme="@style/AppTheme.Toolbar.Message"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message_title"
        android:layout_below="@id/scene"
        android:hint="@string/activity_add_edit_title"
        android:inputType="textShortMessage|textCapWords"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/text_cursor"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="26sp"
        app:baseColor="@color/primary_text"
        app:primaryColor="@color/accent"
        app:hideUnderline="false" />

    <com.melnykov.fab.ObservableScrollView
        android:id="@+id/scrollview_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/message_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/message_phone"
                android:completionThreshold="1"
                android:imeOptions="actionDone"
                android:hint="@string/activity_add_edit_phone"
                android:inputType="textShortMessage|textCapWords"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="0dp"
                app:baseColor="@color/primary_text"
                app:iconLeft="@mipmap/ic_phone"
                app:primaryColor="@color/accent"

                app:hideUnderline="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/message_date"
                        android:hint="@string/activity_add_edit_date"
                        android:inputType="date"
                        android:onClick="onPickDate"
                        app:iconLeft="@mipmap/ic_event"
                        app:baseColor="@color/primary_text"
                        app:primaryColor="@color/accent"

                        android:enabled="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/message_time"
                        android:hint="@string/activity_add_edit_time"
                        android:inputType="time"
                        android:onClick="onPickTime"
                        app:iconLeft="@mipmap/ic_query"
                        app:baseColor="@color/primary_text"
                        app:primaryColor="@color/accent"

                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:enabled="true" />
                </LinearLayout>


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/message_message"
                        android:hint="@string/activity_add_edit_message"
                        android:inputType="textMultiLine"
                        android:gravity="top|start"

                        android:textCursorDrawable="@drawable/text_cursor"
                        app:maxCharacters="160"
                        app:iconLeft="@mipmap/ic_textsms"
                        app:baseColor="@color/primary_text"
                        app:primaryColor="@color/accent"

                        />
            <!--</LinearLayout>-->






            </LinearLayout>
        </LinearLayout>

    </com.melnykov.fab.ObservableScrollView>



    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:src="@mipmap/ic_done"
        app:fab_colorNormal="@color/accent"
        app:fab_colorPressed="@color/accent_dark"
        app:fab_colorRipple="@color/accent_darker"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onFabClickDone" />



</RelativeLayout>